# red-home

./: .env.exc  .gitignore  Cargo.toml
front_end/: craco.config.js  package.json
migrations/: 20230131110054_temperature.sql
src/: config.rs  lib.rs  main.rs
src/crawlers/: electricity.rs  mod.rs  task.rs  water_fee.rs
src/http/: error.rs  extractor.rs  mod.rs  spider_data.rs  temperature.rs  types.rs  users.rs
src/http/articles/: comments.rs  listing.rs  mod.rs
