[package]
name = "red-home"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
    "yuluoluo <yuluozy@outlook.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies: runtime, HTTP framework and database client.
futures = "0.3"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6.2", features = ["tower-log", "macros"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "mysql", "uuid", "chrono","json", "macros"] }

# The `clap` beta gives us a much nicer way to define configuration parameters for our application.
clap = { version = "4.0", features = ["derive", "cargo", "env", "unicode", "string"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
chrono = {version =  "0.4.23", features = ["alloc", "std","clock","serde","unstable-locales"] }
uuid = { version = "1.2", features = ["serde"] }
reqwest = "0.11.13"
sxd-xpath = "0.4.2"

# Utility Crates
anyhow = "1.0"
async-trait = "0.1"
dotenv = "0.15.0"
itertools = "0.10.1"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8.4"
thiserror = "1.0.30"